# Training

./: LICENSE  README.md  ass2_1.js  ass2_2.js  ass2_3.js
Basic Website/: index.html
Rust/all-assignment/: Cargo.toml
Rust/all-assignment/JSON-data/: StudentData copy.json  StudentData.json  Task1.json  Task2.json  Task3.json  fonrData.json  stud_data.json  table_hash.json  test.json
Rust/all-assignment/src/: main.rs
Rust/all-assignment/src/advanced_thread_task/: mod.rs
Rust/all-assignment/src/advanced_thread_task/bifurcation_level_hashmap/: mod.rs
Rust/all-assignment/src/advanced_thread_task/bifurcation_task_hashmap/: mod.rs
Rust/all-assignment/src/advanced_thread_task/hash_task_assign/: mod.rs
Rust/all-assignment/src/axum_crud_task/: mod.rs
Rust/all-assignment/src/common/: mod.rs
Rust/all-assignment/src/emp_by_hashmap/: mod.rs
Rust/all-assignment/src/employee/: mod.rs
Rust/all-assignment/src/string_freq/: mod.rs
Rust/all-assignment/src/string_task/: mod.rs
Rust/all-assignment/src/stud_by_hashmap/: mod.rs
Rust/all-assignment/src/student/: mod.rs
Rust/all-assignment/src/table/: mod.rs
Rust/all-assignment/src/table_by_hashmap/: mod.rs
Rust/all-assignment/src/table_by_map/: mod.rs
Rust/all-assignment/src/thread_generate_datas/: mod.rs
Rust/grpc_server/: Cargo.toml  build.rs
Rust/grpc_server/json_data/: employee.json  student.json
Rust/grpc_server/proto/: employee.proto  students.proto
Rust/grpc_server/src/: main.rs
Rust/grpc_server/src/employee/: mod.rs  model.rs
Rust/grpc_server/src/student/: mod.rs  model.rs
(+59 files in other folders)
