[package]
name = "grpc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[build-dependencies]
tonic-build = "0.11"
